# BIT_CS_2021_Digital_Image_Process_Demo

./: README.md
Seam Carving Demo 大作业/: ~$项目作业.docx
Seam Carving Demo 大作业/2022_opencv_seamCarving/: CMakeLists.txt  ImprovedSeamCarvingResize.cpp  ImprovedSeamCarvingResize.h  SeamCarvingEnergyFunctions.cpp  SeamCarvingEnergyFunctions.h  SeamCarvingResize.cpp  SeamCarvingResize.h  main.cpp
Seam Carving Demo 大作业/References/: researchpublication2.doc
Superpixel SLIC Demo 随堂测验4/Code/: SuperPixelSLIC.cpp  SuperPixelSLIC.h  main.cpp
